[metadata]
name = daybed
version=0.0
description=daybed
description-file=
    README.rst
    CHANGES.rst
classifiers=
    Programming Language :: Python
    PrFramework :: Pylons
    PrTopic :: Internet :: WWW/HTTP
    PrTopic :: Internet :: WWW/HTTP :: WSGI :: Application
requires-dist=
    pyramid
    cornice
    colander
    couchdb
keywords=
    web
    pyramid
    pylons

[files]
packages = daybed

[entry_points]
paste.app_factory=
    main = daybed:main

