[metadata]
author = Spiral Project
author_email = spiral-project@lolnet.org
name = daybed
home-page = https://github.com/spiral-project/daybed
version=0.1
description=daybed
description-file=
    README.rst
    CHANGES.rst
classifiers=
    Programming Language :: Python
    Framework :: Pylons
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
requires-dist=
    pyramid
    cornice
    colander
    couchdb
    pyramid_persona
keywords=
    web
    pyramid
    pylons

[files]
packages = daybed

[entry_points]
paste.app_factory=
    main = daybed:main

