[metadata]
author = Spiral Project
author_email = spiral-project@lolnet.org
name = daybed
home-page = https://github.com/spiral-project/daybed
version=0.1
description=daybed
description-file=
    README.rst
    CHANGES.rst
classifiers=
    Programming Language :: Python
    Framework :: Pylons
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
dependency-link=
    https://github.com/lilydjwg/couchdb-python3/tarball/master#egg=couchdb
requires-dist=
    pyramid
    cornice
    colander
    couchdb
    pyramid_persona
    pyramid_multiauth
    pyramid_mako
keywords=
    web
    pyramid
    pylons

[files]
packages = daybed

[entry_points]
paste.app_factory=
    main = daybed:main
